refactor: change spaces and theme color to improve ui

--- a/src/core/styles/variables.scss
+++ b/src/core/styles/variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --primary: rgb(80, 255, 235);
-  --primary-light: rgb(109, 243, 227);
-  --primary-dark: rgb(19, 192, 171);
+  --primary: #00b19d;
+  --primary-light: rgb(71, 230, 211);
+  --primary-dark: rgb(14, 174, 156);
 }
